codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---












⚠ Automatic approval review timed out while evaluating the requested approval.

• Working (0s • esc to interrupt)


› Ask Codex to do anything

  gpt-5.3-codex default · /tmp/project
